clusters/talos-cluster/minio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-service
  namespace: minio
spec:
  type: LoadBalancer
  loadBalancerClass: tailscale
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
  selector:
    app: minio
---
apiVersion: v1
kind: Service
metadata:
  name: minio-console
  namespace: minio
spec:
  type: LoadBalancer
  loadBalancerClass: tailscale
  ports:
    - port: 9001
      targetPort: 9001
      protocol: TCP
  selector:
    app: minio
