clusters/talos-cluster/minio/httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-route
  namespace: minio
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: gateway
  hostnames:
    - "minio.horus.ossai.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: minio-service
          port: 9090
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-s3-route
  namespace: minio
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: gateway
  hostnames:
    - "s3.horus.ossai.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: minio-service
          port: 9000
